Story 1849: Rework authentication lookup for Authentication Realm.